--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
